esphome/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: hass
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/component: esp32
    app.kubernetes.io/part-of: hass
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
    spec:
      containers:
      - name: esphome
        image: esphome/esphome:2026.1.5
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            protocol: TCP
            containerPort: 6052
        volumeMounts:
          - name: esphome-pvc
            mountPath: /config
          - name: esphome-build
            mountPath: /config/.esphome
          - name: localtime
            mountPath: /etc/localtime
            readOnly: true
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 6052
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 6052
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 6052
          timeoutSeconds: 1
        securityContext:
          privileged: true
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "2048Mi"
            cpu: "2000m"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 192.168.30.1
          - 192.168.0.1
          - 192.168.20.1
        searches:
          - mydomain.com
      volumes:
        - name: esphome-pvc
          persistentVolumeClaim:
            claimName: esphome-config-longhorn
        - name: esphome-build
          emptyDir: {}
        - name: localtime
          hostPath:
            path: /etc/localtime
